--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "bootstrap-datepicker": "^1.6.4",
     "can": "^2.3.16",
     "can-connect": "^0.5.0",
+    "can-connect-feathers": "^1.1.7",
     "can-zone": "^0.5.0",
     "chart.js": "^2.2.2",
     "done-autorender": "^0.8.0",
