--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
       "lib": "src"
     },
     "configDependencies": [
-     "node_modules/can-zone/register"
+      "node_modules/can-zone/register"
     ],
     "npmAlgorithm": "flat",
     "bundle": [
@@ -63,6 +63,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.6.4",
+    "bootstrap-notify": "^3.1.3",
     "can": "^2.3.16",
     "can-connect": "^0.5.0",
     "can-connect-feathers": "^1.1.7",
@@ -75,6 +76,7 @@
     "font-awesome": "^4.6.3",
     "generator-donejs": "^0.9.0",
     "jquery": "~2.2.1",
+    "lodash": "^4.17.0",
     "steal": "^0.16.0"
   },
   "devDependencies": {
