--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.6.4",
     "bootstrap-notify": "^3.1.3",
-    "can": "^2.3.16",
-    "can-connect": "^0.5.0",
-    "can-connect-feathers": "^1.1.7",
+    "can": "^2.3.27",
+    "can-connect": "^0.5.5",
+    "can-connect-feathers": "^1.2.0",
+    "can-define": "^1.0.4",
     "can-zone": "^0.5.0",
     "chart.js": "^2.2.2",
     "done-autorender": "^0.8.0",
@@ -75,7 +76,7 @@
     "done-serve": "^0.2.0",
     "font-awesome": "^4.6.3",
     "generator-donejs": "^0.9.0",
-    "jquery": "~2.2.1",
+    "jquery": "~3.1.1",
     "lodash": "^4.17.0",
     "steal": "^0.16.0"
   },
