--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "can-component": "^3.0.4",
     "can-compute": "^3.0.5",
     "can-connect": "^1.0.19",
-    "can-connect-feathers": "^2.0.0",
+    "can-connect-feathers": "^3.0.1",
     "can-construct": "^3.0.6",
     "can-construct-super": "^3.0.0",
     "can-control": "^3.0.5",
@@ -95,9 +95,16 @@
     "can-view-scope": "^3.1.2",
     "can-zone": "^0.6.0",
     "chart.js": "^2.2.2",
+    "feathers-authentication-client": "^0.1.6",
+    "feathers-client": "^1.8.0",
+    "feathers-hooks": "^1.7.1",
+    "feathers-localstorage": "^1.0.0",
+    "feathers-rest": "^1.5.3",
+    "feathers-socketio": "^1.4.2",
     "font-awesome": "^4.7.0",
     "jquery": "~3.1.1",
     "lodash": "^4.17.0",
+    "socket.io-client": "^1.7.2",
     "steal": "^1.0.5",
     "steal-stache": "^3.0.4"
   },
