--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "can-model": "^3.0.0",
     "can-mustache": "^0.2.0",
     "can-route": "^3.0.6",
+    "can-route-pushstate": "^3.0.1",
     "can-set": "^1.0.3",
     "can-stache": "^3.0.17",
     "can-util": "^3.2.0",
