--- a/package.json
+++ b/package.json
@@ -66,36 +66,46 @@
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.6.4",
     "bootstrap-notify": "^3.1.3",
-    "can-component": "^3.0.4",
+    "can-component": "^3.0.5",
     "can-compute": "^3.0.5",
     "can-connect": "^1.2.0",
-    "can-connect-feathers": "^3.0.8",
+    "can-connect-feathers": "^3.1.0",
     "can-construct": "^3.0.6",
-    "can-construct-super": "^3.0.0",
+    "can-construct-super": "^3.0.2",
     "can-control": "^3.0.5",
-    "can-define": "^1.0.8",
+    "can-define": "^1.0.15",
+    "can-define-stream": "0.0.6",
     "can-event": "^3.0.2",
     "can-jquery": "^3.0.3",
     "can-list": "^3.0.2",
     "can-map": "^3.0.4",
     "can-map-backup": "^3.0.2",
-    "can-map-define": "^3.0.2",
+    "can-map-define": "^3.0.3",
+    "can-namespace": "1.0.0",
+    "can-observation": "3.0.5",
     "can-model": "^3.0.0",
     "can-mustache": "^0.2.0",
     "can-route": "^3.0.6",
     "can-route-pushstate": "^3.0.1",
     "can-set": "^1.0.3",
-    "can-stache": "^3.0.17",
-    "can-util": "^3.2.0",
-    "can-view-autorender": "^3.0.3",
-    "can-view-callbacks": "^3.0.3",
-    "can-view-href": "^3.0.3",
-    "can-view-import": "^3.0.4",
-    "can-view-live": "^3.0.5",
-    "can-view-nodelist": "^3.0.4",
-    "can-view-parser": "^3.0.4",
-    "can-view-scope": "^3.1.2",
-    "can-zone": "^0.6.0",
+    "can-stache": "^3.0.18",
+    "can-stache-bindings": "3.0.6",
+    "can-stache-converters": "3.0.6",
+    "can-stream": "0.0.5",
+    "can-types": "1.0.1",
+    "can-util": "^3.2.2",
+    "can-vdom": "3.0.1",
+    "can-view-autorender": "3.0.3",
+    "can-view-callbacks": "3.0.3",
+    "can-view-href": "3.0.3",
+    "can-view-import": "3.0.4",
+    "can-view-live": "3.0.5",
+    "can-view-model": "3.1.3",
+    "can-view-nodelist": "3.0.4",
+    "can-view-parser": "3.0.4",
+    "can-view-scope": "3.1.2",
+    "can-view-target": "3.0.7",
+    "can-zone": "^0.6.2",
     "chart.js": "^2.2.2",
     "component-emitter": "^1.2.1",
     "debug": "^2.6.0",
